removed display:inline style for mobile-help-container

--- a/table-of-contents-style-homepage/index.html
+++ b/table-of-contents-style-homepage/index.html
@@ -209,6 +209,7 @@
                             <div class="black-top"></div>
                           </header>
                           <main class="crisis-container">
+                            <div class="mobile-are-you-in-crisis">Are you in crisis?</div>
                           </main>
                         </div>
                       </section>
