change units in function from px to rem

--- a/table-of-contents-style-homepage/index.html
+++ b/table-of-contents-style-homepage/index.html
@@ -167,7 +167,7 @@
             var scrollTop = window.pageYOffset || document
             .documentElement.scrollTop;
             if (scrollTop > lastScrollTop){
-                navbar.style.top="-360px";
+                navbar.style.top="-20rem";
             }else{
             navbar.style.top="0";
             }
