experiment with adding margin above letter on click

--- a/table-of-contents-style-homepage/providers.html
+++ b/table-of-contents-style-homepage/providers.html
@@ -105,7 +105,7 @@
                         <div class="alphabet-divider">|</div>
                         <div class="alphabet"><a class="blue" href="#a-anchor">A</a></div> 
                         <div class="alphabet-divider">|</div>
-                        <div class="alphabet"><a class="blue" href="#b-anchor">B</a></div>
+                        <div class="alphabet" id="b-anchor"><a class="blue" href="#b-anchor">B</a></div>
                         <div class="alphabet-divider">|</div>
                         <div class="alphabet"><a class="blue" href="#c-anchor">C</a></div>
                         <div class="alphabet-divider">|</div>
@@ -171,7 +171,7 @@
                         <section id="a-providers" class="providers">
                         </section>
                         <a name="b-anchor"></a>
-                        <section class="alphabet-heading">B</section>
+                        <section class="alphabet-heading" id="b-selected">B</section>
                         <section id="b-providers" class="providers">
                         </section>
                         <a name="c-anchor"></a>
