--- a/table-of-contents-style-homepage/category.html
+++ b/table-of-contents-style-homepage/category.html
@@ -131,7 +131,7 @@
                         </div>
 
                         <div class="print">
-                            <button id="languageToggle" class="spanish-button button-style">Español</button>
+                            <button id="pageLanguageToggle" class="spanish-button button-style">Español</button>
                             <button id="print" class="button-style">Print</button>
                         </div>
 
