experiment with thank you message

--- a/table-of-contents-style-homepage/about.html
+++ b/table-of-contents-style-homepage/about.html
@@ -155,7 +155,15 @@
 				<input class="submit-button clear" type="reset" value="Clear">
 				<input class="submit-button send" type="submit" value="Send">
 				</div>
+        <input type="hidden" name="_next" value="/#thanks">
 			</form>
+<!-- the input with the value of /#thanks and the following div for the thanks message, this isn't yet working -->
+      <div id="thanks" class="modal">
+         <div class="thanks-container">
+           <h3>Done!</h3>
+           <p>Thanks for your help!</p>
+         </div>
+      </div>
 
 		</section>
 		</main>
